add about me section and refactor some namespaces

--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
       <div>
         <nav class="nav">
           <ul class="nav__list">
-            <li><a href="#">início</a></li>
-            <li><a href="#">quem somos</a></li>
-            <li><a href="#">contato</a></li>
+            <li><a href="#about">início</a></li>
+            <li><a href="#titles">títulos</a></li>
+            <li><a href="#morumbi">morumbi</a></li>
           </ul>
         </nav>
         <h1>spfc</h1>
       </div>
     </header>
     <main>
-      <section class="container inicio">
+      <section class="about container" id="about">
         <div class="">
           <h2>São Paulo Futebol Clube</h2>
           <p>
@@ -38,52 +38,51 @@
           </div>
         </div>
       </section>
-      <section class="titulos container">
+      <section class="titles container" id="titles">
         <h2>Títulos</h2>
-        <ul class="titulos__list">
-          <li class="titulos__item">
+        <ul class="titles__list">
+          <li class="titles__item">
             <h3>Brasileirão</h3>
             <p>6</p>
           </li>
-          <li class="titulos__item">
+          <li class="titles__item">
             <h3>Libertadores</h3>
             <p>3</p>
           </li>
-          <li class="titulos__item">
+          <li class="titles__item">
             <h3>Intercontinental</h3>
             <p>1</p>
           </li>
-          <li class="titulos__item">
+          <li class="titles__item">
             <h3>Sul-americana</h3>
             <p>1</p>
           </li>
-          <li class="titulos__item">
+          <li class="titles__item">
             <h3>Recopa Sul-americana</h3>
             <p>2</p>
           </li>
-          <li class="titulos__item">
+          <li class="titles__item">
             <h3>Supercopa Libertadores</h3>
             <p>1</p>
           </li>
-          <li class="titulos__item">
+          <li class="titles__item">
             <h3>Conmebol</h3>
             <p>1</p>
           </li>
-          <li class="titulos__item">
+          <li class="titles__item">
             <h3>Copa Master da Supercopa</h3>
             <p>1</p>
           </li>
-          <li class="titulos__item">
+          <li class="titles__item">
             <h3>Paulistão</h3>
             <p>22</p>
           </li>
-          <li class="titulos__item">
+          <li class="titles__item">
             <h3>Torneio Rio-São Paulo</h3>
             <p>1</p>
           </li>
-        </ul>
       </section>
-      <section class="morumbi container">
+      <section class="morumbi container" id="morumbi">
         <h2>Morumbi</h2>
         <div class="morumbi__content">
           <img
@@ -98,6 +97,14 @@
           </p>
         </div>
       </section>
+      <section class="pwdbymoral container">
+        <h2 class="pwdbymoral__title">Sobre mim</h2>
+        <p class="pwdbymoral__text">
+          Olá! Meu nome é Vinícius Varjão, sou um desenvolvedor full-stack web e
+           mobile e criei esse site tentando fazer o melhor trabalho possível 
+           apenas com html e css em pouco tempo.
+        </p>
+        </section>
       <footer class="footer container">
         <p>
           <a
@@ -112,3 +119,4 @@
     </main>
   </body>
 </html>
+
